[B]Retrospect v5.5.xx - Changelog - 2022-x-xx[/B]

t.b.d.

[B]Framework related[/B]
_None_

[B]GUI/Settings/Language related[/B]
_None_

[B]Channel related[/B]
* Fixed: NPO video playback broken (Fixes #1672).