@@ -6,7 +6,7 @@ sonar.projectKey=Retrospect
 # sonar.login=%SONAR_TOKEN%
 
 sonar.projectName=Retrospect
-sonar.projectVersion=5.5.12
+sonar.projectVersion=5.5.13
 
 sonar.sources=.
 sonar.exclusions=resources/lib/pyscrypt/*,resources/lib/urllib3/**/*,resources/lib/pyaes/*,**/*.pyc,**/*.pyo,debugrun.py,apiserver.py,tests/**/*
