@@ -1,6 +1,6 @@
-[B]Retrospect v5.5.xx - Changelog - 2022-x-xx[/B]
+[B]Retrospect v5.5.13 - Changelog - 2023-02-01[/B]
 
-t.b.d.
+This version fixes a log-in issue for the NPO Start channel.
 
 [B]Framework related[/B]
 _None_
@@ -10,3 +10,4 @@ _None_
 
 [B]Channel related[/B]
 * Fixed: NPO video playback broken (Fixes #1672).
+* Fixed: Log-in for NPO Start (See #1672).
